--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "tsc && node --unhandled-rejections=strict ./dist/app.js",
+		"start": "node --unhandled-rejections=strict ./dist/app.js",
 		"debug": "export DEBUG=* && npm run start",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "npx tsc && nodemon ./dist/app.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/bcryptjs": "^2.4.2",
+		"@types/jsonwebtoken": "^8.5.8",
+		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"debug": "^4.3.4",
 		"express": "^4.18.1",
 		"express-winston": "^4.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.3.4",
+		"nodemon": "^2.0.16",
 		"shortid": "^2.2.16",
+		"ts-node": "^10.8.0",
 		"winston": "^3.7.2"
 	},
 	"devDependencies": {
