--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"debug": "^4.3.4",
+		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-winston": "^4.2.0",
 		"jsonwebtoken": "^8.5.1",
