--- a/package.json
+++ b/package.json
@@ -4,36 +4,42 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node --unhandled-rejections=strict ./dist/app.js",
+		"start": "node --unhandled-rejections=strict ./dist/src/index.js",
 		"debug": "export DEBUG=* && npm run start",
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "npx tsc && nodemon ./dist/app.js"
+		"test": "jest --detectOpenHandles --runInBand  --forceExit",
+		"dev": "npx tsc && nodemon ./dist/index.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/bcryptjs": "^2.4.2",
-		"@types/jsonwebtoken": "^8.5.8",
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"debug": "^4.3.4",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
-		"express-winston": "^4.2.0",
 		"jsonwebtoken": "^8.5.1",
+		"mongodb-memory-server": "^8.5.2",
 		"mongoose": "^6.3.4",
-		"nodemon": "^2.0.16",
 		"shortid": "^2.2.16",
-		"ts-node": "^10.8.0",
-		"winston": "^3.7.2"
+		"supertest": "^6.2.3",
+		"ts-node": "^10.8.0"
 	},
 	"devDependencies": {
+		"nodemon": "^2.0.16",
+		"morgan": "^1.10.0",
+		"@types/bcryptjs": "^2.4.2",
+		"@types/jsonwebtoken": "^8.5.8",
+		"@types/morgan": "^1.9.3",
 		"@types/cors": "^2.8.12",
 		"@types/debug": "^4.1.7",
 		"@types/express": "^4.17.13",
+		"@types/jest": "^27.5.1",
 		"@types/mongoose": "^5.11.97",
 		"@types/shortid": "^0.0.29",
+		"@types/supertest": "^2.0.12",
+		"jest": "^28.1.0",
 		"source-map-support": "^0.5.21",
+		"ts-jest": "^28.0.2",
 		"tslint": "^6.1.3",
 		"typescript": "^4.6.4"
 	}
