--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@types/faker": "^6.6.9",
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"debug": "^4.3.4",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"faker": "^6.6.6",
 		"jsonwebtoken": "^8.5.1",
 		"mongodb-memory-server": "^8.5.2",
 		"mongoose": "^6.3.4",
@@ -25,19 +27,20 @@
 		"ts-node": "^10.8.0"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.16",
-		"morgan": "^1.10.0",
+		"@faker-js/faker": "^6.3.1",
 		"@types/bcryptjs": "^2.4.2",
-		"@types/jsonwebtoken": "^8.5.8",
-		"@types/morgan": "^1.9.3",
 		"@types/cors": "^2.8.12",
 		"@types/debug": "^4.1.7",
 		"@types/express": "^4.17.13",
 		"@types/jest": "^27.5.1",
+		"@types/jsonwebtoken": "^8.5.8",
 		"@types/mongoose": "^5.11.97",
+		"@types/morgan": "^1.9.3",
 		"@types/shortid": "^0.0.29",
 		"@types/supertest": "^2.0.12",
 		"jest": "^28.1.0",
+		"morgan": "^1.10.0",
+		"nodemon": "^2.0.16",
 		"source-map-support": "^0.5.21",
 		"ts-jest": "^28.0.2",
 		"tslint": "^6.1.3",
