update docker file only copy the required files and ignore dev dependencies during npm i

--- a/package.json
+++ b/package.json
@@ -12,22 +12,21 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/faker": "^6.6.9",
 		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
-		"debug": "^4.3.4",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-mongo-sanitize": "^2.2.0",
 		"faker": "^6.6.6",
 		"jsonwebtoken": "^8.5.1",
-		"mongodb-memory-server": "^8.5.2",
 		"mongoose": "^6.3.4",
-		"shortid": "^2.2.16",
-		"supertest": "^6.2.3",
-		"ts-node": "^10.8.0"
+		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
+		"ts-node": "^10.8.0",
+		"supertest": "^6.2.3",
+		"mongodb-memory-server": "^8.5.2",
+		"@types/faker": "^6.6.9",
 		"@faker-js/faker": "^6.3.1",
 		"@types/bcryptjs": "^2.4.2",
 		"@types/cors": "^2.8.12",
@@ -40,7 +39,6 @@
 		"@types/shortid": "^0.0.29",
 		"@types/supertest": "^2.0.12",
 		"jest": "^28.1.0",
-		"morgan": "^1.10.0",
 		"nodemon": "^2.0.16",
 		"source-map-support": "^0.5.21",
 		"ts-jest": "^28.0.2",
